--- a/views/access/accessscripts.ejs
+++ b/views/access/accessscripts.ejs
@@ -93,8 +93,11 @@
             else {
                 const data = { accessname: accessname }
                 Upsert('POST', '/access/save', data, (result) => {
-                    if (result == 'success') {
+                    if (result.msg == 'success') {
                         reload()
+                        success("Saved", `${accessname} Successfully Added!`)
+                    } else if (result.msg == 'exist'){
+                        warning("Duplicate", `${accessname} already exist!`)
                     }
                     $('#accessname').val('');
                     $btnIcon.removeClass('d-none');
@@ -119,7 +122,7 @@
                 accesscode: accesscode,
             };
             Upsert('POST', '/access/status', data, (result) => {
-                if (result == 'success') {
+                if (result.msg == 'success') {
                     reload();
                 }
             });
@@ -161,10 +164,13 @@
                     accesscode: accesscode,
                 }
                 Upsert('POST', '/access/edit', data, (result) => {
-                    if (result == 'success') {
+                    if (result.msg == 'success') {
                         reload();
+                        success("Update", "Update Successful!")
                         $('#accessModal').modal('hide');
                         $('#accessnamemodal').val('');
+                    } else if(result.msg == 'duplicate'){
+                        warning("Duplicate", `${accessnamemodal} already exist!`)
                     }
                     $btnIcon.removeClass('d-none');
                     $btnSpinner.addClass('d-none');
