--- a/views/access/access.ejs
+++ b/views/access/access.ejs
@@ -51,7 +51,7 @@
         <div class="col-lg-12">
             <div class="card shadow">
                 <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold">Access Type</h6>
+                    <h6 class="m-0 font-weight-bold h4 label-title">Access Type</h6>
                 </div>
                 <div class="card-body extend">
                     <div class="row">
@@ -83,7 +83,7 @@
         <div class="card-header py-3 header-bg">
             <div class="row">
                 <div class="col-md-6">
-                    <h6 class="mt-2 font-weight-bold table-title">Access Table</h6>
+                    <h6 class="mt-2 font-weight-bold table-title h4 label-title">Access Table</h6>
                 </div>
                 <div class="col-md-6">
                     <div class="input-group">
