--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -126,6 +126,7 @@
                                                         <option value="l">Liter</option>
                                                         <option value="kl">Kiloliter</option>
                                                         <option value="gal">Galon</option>
+                                                        <option value="pc">Piece</option>
                                                     </select>
                                                 </td>
                                                 <td data-label="Quantity" class="custom-mobile-align" id="quantityInput0"></td>
