--- a/views/productioncomponents/productioncomponentsscripts.ejs
+++ b/views/productioncomponents/productioncomponentsscripts.ejs
@@ -812,6 +812,7 @@
                             <option value="l">Liter</option>
                             <option value="kl">Kiloliter</option>
                             <option value="gal">Galon</option>
+                            <option value="pc">Piece</option>
                         </select>
                     </td>
                     <td data-label="Quantity" class="custom-mobile-align" id="quantityInput${counter + 1}"></td>
